--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de WAVE para MP3</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css"> <!-- Referência ao CSS -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-
 <body>
     <div class="container">
         <h1>Conversor de WAVE para MP3</h1>
@@ -22,7 +20,6 @@
         <p id="status"></p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Referência ao JS -->
 </body>
-
 </html>
